--- a/sendNavigation/sendNavigation/Base.lproj/Main.storyboard
+++ b/sendNavigation/sendNavigation/Base.lproj/Main.storyboard
@@ -13,11 +13,11 @@
             <objects>
                 <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="sendNavigation" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="787"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XU7-iZ-Xeo">
-                                <rect key="frame" x="30" y="132" width="330" height="44.333333333333343"/>
+                                <rect key="frame" x="30" y="88" width="330" height="44.333333333333343"/>
                                 <attributedString key="attributedText">
                                     <fragment content="root">
                                         <attributes>
@@ -29,7 +29,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d0o-ga-W2K">
-                                <rect key="frame" x="100" y="213" width="190" height="35"/>
+                                <rect key="frame" x="100" y="169" width="190" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="gray" title="send">
                                     <color key="baseForegroundColor" systemColor="systemBackgroundColor"/>
@@ -40,7 +40,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XoI-kl-CWg">
-                                <rect key="frame" x="100" y="365" width="190" height="35"/>
+                                <rect key="frame" x="100" y="321" width="190" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="gray" title="segue">
                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -51,16 +51,24 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="print for segue or xib" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hhm-eu-j09">
-                                <rect key="frame" x="100" y="293" width="190" height="34"/>
+                                <rect key="frame" x="100" y="249" width="190" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="chu-xs-0P8">
-                                <rect key="frame" x="100" y="438" width="190" height="35"/>
+                                <rect key="frame" x="100" y="394" width="190" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Xib"/>
                                 <connections>
                                     <action selector="xibButtonSend:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nwy-kN-pK2"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RNT-0w-lMf">
+                                <rect key="frame" x="126" y="454" width="138" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="CLOSER SEND"/>
+                                <connections>
+                                    <action selector="closerSendBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rCm-8a-ik4"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -76,13 +84,16 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="d0o-ga-W2K" secondAttribute="trailing" constant="100" id="AlO-DH-K6B"/>
                             <constraint firstItem="d0o-ga-W2K" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GPq-Yr-sTQ"/>
                             <constraint firstItem="hhm-eu-j09" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="N3t-UV-czX"/>
+                            <constraint firstItem="RNT-0w-lMf" firstAttribute="top" secondItem="chu-xs-0P8" secondAttribute="bottom" constant="25" id="NU0-4U-oQr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="chu-xs-0P8" secondAttribute="trailing" constant="100" id="OKe-9Z-WD1"/>
                             <constraint firstItem="XoI-kl-CWg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="OXQ-Cv-aW9"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hhm-eu-j09" secondAttribute="trailing" constant="100" id="RCL-gt-s07"/>
                             <constraint firstItem="chu-xs-0P8" firstAttribute="top" secondItem="XoI-kl-CWg" secondAttribute="bottom" constant="38" id="aFy-ZD-umy"/>
                             <constraint firstItem="d0o-ga-W2K" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="gBe-Ne-gnZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="RNT-0w-lMf" secondAttribute="trailing" constant="126" id="kdP-1Y-YB4"/>
                             <constraint firstItem="XoI-kl-CWg" firstAttribute="top" secondItem="hhm-eu-j09" secondAttribute="bottom" constant="38" id="mLI-dq-73l"/>
                             <constraint firstItem="d0o-ga-W2K" firstAttribute="top" secondItem="XU7-iZ-Xeo" secondAttribute="bottom" constant="36.670000000000002" id="ppN-MA-d0Z"/>
+                            <constraint firstItem="RNT-0w-lMf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="126" id="ye0-Uo-zhD"/>
                             <constraint firstItem="XU7-iZ-Xeo" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="41" id="yqd-yz-CeC"/>
                         </constraints>
                     </view>
@@ -101,16 +112,16 @@
             <objects>
                 <viewController storyboardIdentifier="SecondViewController" id="XCs-ht-Tm6" customClass="SecondViewController" customModule="sendNavigation" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PCT-Oo-SqU">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="787"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="введите текст" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2zH-5u-8A3">
-                                <rect key="frame" x="30" y="337" width="330" height="34"/>
+                                <rect key="frame" x="30" y="293" width="330" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e17-3K-SqJ">
-                                <rect key="frame" x="100" y="396" width="190" height="35"/>
+                                <rect key="frame" x="100" y="352" width="190" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="gray" title="send back">
                                     <color key="baseForegroundColor" systemColor="secondarySystemGroupedBackgroundColor"/>
@@ -122,7 +133,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LTa-zP-W7c">
-                                <rect key="frame" x="100" y="451" width="190" height="35"/>
+                                <rect key="frame" x="100" y="407" width="190" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="gray" title="unwind">
                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -132,19 +143,30 @@
                                     <segue destination="uxf-52-vGo" kind="unwind" unwindAction="unwindToFirstScreen:" id="e9V-fY-A9N"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JlI-Oe-VZX">
+                                <rect key="frame" x="100" y="462" width="190" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="save with closer"/>
+                                <connections>
+                                    <action selector="saveWithCloserBtn:" destination="XCs-ht-Tm6" eventType="touchUpInside" id="l07-GT-ANJ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Da9-TK-IwS"/>
                         <color key="backgroundColor" systemColor="systemYellowColor"/>
                         <constraints>
                             <constraint firstItem="Da9-TK-IwS" firstAttribute="trailing" secondItem="LTa-zP-W7c" secondAttribute="trailing" constant="100" id="6kT-Fd-Zrg"/>
                             <constraint firstItem="LTa-zP-W7c" firstAttribute="top" secondItem="e17-3K-SqJ" secondAttribute="bottom" constant="20" id="8zW-2n-aW1"/>
+                            <constraint firstItem="Da9-TK-IwS" firstAttribute="trailing" secondItem="JlI-Oe-VZX" secondAttribute="trailing" constant="100" id="Iug-TM-Hp4"/>
                             <constraint firstItem="2zH-5u-8A3" firstAttribute="top" secondItem="Da9-TK-IwS" secondAttribute="top" constant="246" id="SsY-s4-zg7"/>
                             <constraint firstItem="2zH-5u-8A3" firstAttribute="leading" secondItem="Da9-TK-IwS" secondAttribute="leading" constant="30" id="YEI-GY-N2J"/>
                             <constraint firstItem="e17-3K-SqJ" firstAttribute="leading" secondItem="Da9-TK-IwS" secondAttribute="leading" constant="100" id="bW9-2j-wqK"/>
                             <constraint firstItem="e17-3K-SqJ" firstAttribute="top" secondItem="2zH-5u-8A3" secondAttribute="bottom" constant="25" id="dpO-dL-OSl"/>
                             <constraint firstItem="Da9-TK-IwS" firstAttribute="trailing" secondItem="e17-3K-SqJ" secondAttribute="trailing" constant="100" id="g3M-HW-QB0"/>
+                            <constraint firstItem="JlI-Oe-VZX" firstAttribute="leading" secondItem="Da9-TK-IwS" secondAttribute="leading" constant="100" id="hf4-ED-9y7"/>
                             <constraint firstItem="LTa-zP-W7c" firstAttribute="leading" secondItem="Da9-TK-IwS" secondAttribute="leading" constant="100" id="kcF-29-8Wa"/>
                             <constraint firstItem="Da9-TK-IwS" firstAttribute="trailing" secondItem="2zH-5u-8A3" secondAttribute="trailing" constant="30" id="nwd-kF-aR7"/>
+                            <constraint firstItem="JlI-Oe-VZX" firstAttribute="top" secondItem="LTa-zP-W7c" secondAttribute="bottom" constant="20" id="wqG-KI-fbH"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="LjC-vX-Ssz"/>
@@ -155,7 +177,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ipk-zB-Et4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="uxf-52-vGo" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2049.2307692307691" y="783.41232227488149"/>
+            <point key="canvasLocation" x="1989" y="4"/>
         </scene>
         <!--first-->
         <scene sceneID="YNm-LK-GCs">
@@ -180,7 +202,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="R70-qm-LNP"/>
+        <segue reference="zXT-Zn-XtY"/>
     </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="labelColor">
